@@ -1,3 +1,5 @@
+#ifndef __CURL_CONTENT_ENCODING_H
+#define __CURL_CONTENT_ENCODING_H
 /***************************************************************************
  *                                  _   _ ____  _
  *  Project                     ___| | | |  _ \| |
@@ -5,7 +7,7 @@
  *                            | (__| |_| |  _ <| |___
  *                             \___|\___/|_| \_\_____|
  *
- * Copyright (C) 1998 - 2007, Daniel Stenberg, <daniel@haxx.se>, et al.
+ * Copyright (C) 1998 - 2008, Daniel Stenberg, <daniel@haxx.se>, et al.
  *
  * This software is licensed as described in the file COPYING, which
  * you should have received as part of this distribution. The terms
@@ -18,7 +20,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: content_encoding.h,v 1.10 2007-11-24 23:16:55 bagder Exp $
+ * $Id: content_encoding.h,v 1.11 2008-07-11 18:42:30 yangtse Exp $
  ***************************************************************************/
 #include "setup.h"
 
@@ -39,3 +41,5 @@ CURLcode
 Curl_unencode_gzip_write(struct connectdata *conn,
                          struct SingleRequest *k,
                          ssize_t nread);
+
+#endif
